# REACT_resume_uv

./: .gitignore  form_templates.py  pyproject.toml  requirements.txt  streamlit_app.py  tools_firebase.py  tools_general.py  tools_langchain.py  tools_langgraph.py  tools_llm.py
content/: 1_homepage.py  2_about_react.py  4_your_content.py  5_create_resume.py
prompts/: prompts.py
streamlit/: dependencies.py  firebase_tools.py  form_templates.py  streamlit_app.py
streamlit/content/: 4_your_content.py
templates/: jakes_resume.py
