[project]
name = "react-resume-uv"
version = "0.0.2"
description = "Integrating OpenAI and possibly other LLMs to initialize the 'Create Resume' page"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.5.0",
    "firebase-admin>=6.6.0",
    "google-cloud-firestore>=2.20.0",
    "langchain==0.3.21",
    "langchain-google-genai>=2.0.11",
    "langchain-openai>=0.3.8",
    "openai>=1.65.4",
    "streamlit>=1.42.0",
]
